<resources>
    <string name="app_name" translatable="false">OxyCardio</string>
    <string name="info">Informations</string>
    <string name="prise">Prise de données</string>
    <string name="statistique">Statistiques Globales</string>
    <string name="profil">Profil</string>
    <string name="donnee_perso">Mes Données</string>

    <!-- Section connexion -->
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="hint_courriel">Entrez votre courriel</string>
    <string name="hint_mdp">Entrez votre mot de passe</string>
    <string name="oxy" translatable="false">Oxy</string>
    <string name="cardio" translatable="false">Cardio</string>

    <!-- Section prise de données -->
    <string name="instructions" translatable="false">Instructions</string>
    <string name="etape1">1. Assurez-vous que l\'appareil de mesure est connecté.</string>
    <string name="etape2">2. Cliquez sur le bouton plus bas.</string>
    <string name="etape3">3. Mettre le doigt sur la puce.</string>
    <string name="etape4">4. Attendre les résultats.</string>

    <!-- Section historique de données -->
    <string name="titre_graphique_rc">Fréquence Cardiaque</string>
    <string name="titre_graphique_so">Saturation d\'Oxygène</string>
    <string name="graphique_temps">7 derniers jours</string>
    <string name="menu_donnees_graphique">Graphique</string>
    <string name="menu_donnees_liste">Liste</string>

    <!-- Section statistiques globales -->
    <string name="derniere_modification">Mise à jour le 08 mars 2024</string>
    <string name="age_stats">Âge</string>
    <string name="cible_stats">Cible (BPM)</string>
    <string name="max_stats">Max (BPM)</string>
    <string name="so_stats_cible">Cible: 95-99%</string>
    <string name="bpm">*BPM = Battements Par Minute</string>
    <string name="description_stats">Vous retrouverez plus bas les mesures cibles en fonction de votre âge. Prendre en considération que la saturation d\'oxygène dans le sang est pour toutes les tranches d\'âges.</string>

    <!-- Section info-santé -->
    <string name="titre_info_sante">Que voulez-vous savoir?</string>
    <string name="titre_card_article1">Que représente le pouls?</string>
    <string name="titre_card_article2">Que représente la saturation d\'oxygène?</string>
    <string name="titre_card_article3">Que faire en cas d\'urgence?</string>
    <string name="date_card_article1">21 février 2024</string>
    <string name="date_card_article2">21 février 2024</string>
    <string name="date_card_article3">21 février 2024</string>
    <string name="description_card_article1">La fréquence cardiaque est le nombre de battements cardiaques à la minute. Ne pas confondre avec le rythme cardiaque ou le pouls. La fréquence cardiaque au repos varie selon l’âge. Un adulte en bonne santé verra sa fréquence se situer entre 50 et 80 pulsations par minute. Théoriquement, la fréquence cardiaque maximale chez une personne est de 220 moins son âge (exemple : 220 – 40 ans = 180). La fréquence cardiaque est aussi a son maximum vers midi. La digestion, la chaleur ou le froid entrainent une augmentation de cette fréquence. De plus, les facteurs de stress influencent la donnée par le biais de trois mécanismes : les mécanismes nerveux, chimique et physique. Pour en savoir plus sur la fréquence cardiaque, cliquez sur le lien ci-dessous.</string>
    <string name="description_card_article2">L\'oxymétrie colorimétrique ou saturation pulsée en oxygène permet de quantifier la saturation en oxygène de l’hémoglobine au niveau des capillaires sanguins. Pour une personne en santé, ce taux est situé entre 95 et 100%. Ce taux diminue chez un fumeur. Si la valeur est a 93% veuillez consulter un médecin immédiatement. Si elle est à 92%, il faut une intervention des urgences médicales. Pour plus d’informations, veuillez consulter le site ci-dessous.</string>
    <string name="description_card_article3">Si jamais vous avez besoin d’urgence, veuillez faire le 911. Toujours consulter un professionnel pour expliquer vos données, en cas de valeurs suspicieuses. Pour en savoir plus sur quoi faire en situation d’urgence, veuillez consulter le site suivant.</string>
    <string name="lien_card_article1">https://fr.wikipedia.org/wiki/Fr%C3%A9quence_cardiaque</string>
    <string name="lien_card_article2">https://fr.wikipedia.org/wiki/Oxym%C3%A9trie_colorim%C3%A9trique</string>
    <string name="lien_card_article3">https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Que_faire_en_cas_d%27urgence_%3F</string>

    <!-- Section profile -->
    <string name="profile_info">Informations personnels</string>
    <string name="profile_modif">Modifier votre mot de passe</string>
    <string name="modif">Modification</string>
    <string name="hint_mdp_actuel">Mot de passe actuel</string>
    <string name="hint_mdp_nouveau">Nouveau mot de passe</string>
    <string name="sauvegarder">Sauvegarder</string>

    <!-- Section toasts -->
    <string name="erreur">Une erreur s'est produite.</string>
    <string name="erreur_conn">Erreur de connexion.</string>
    <string name="validation_form">Veuillez remplir tous les champs.</string>
    <string name="mauvaise_info">Informations invalides.</string>
    <string name="mdp_actuel_vide">Entrez votre mot de passe actuel.</string>
    <string name="mdp_nouveau_vide">Entrez un nouveau mot de passe.</string>
</resources>