<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profil.fragment_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="50sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#474646"
                android:shadowDx="2"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="Oxy"
                android:textColor="#0ac5eb"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCardio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:shadowColor="#474646"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="8"
                android:text="Cardio"
                android:textColor="#A92121"
                android:textSize="60sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvConnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:shadowColor="#474646"
            android:text="@string/connexion"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNomUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="15sp"
            android:ems="10"
            android:hint="@string/hint_courriel"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etMDP"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="15sp"
            android:ems="10"
            android:hint="@string/hint_mdp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btConnexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:text="@string/connexion" />

    </LinearLayout>
</FrameLayout>